src/app/components/home/home.component.css
main {
  background-color: var(--content-color);
  transition: 1.5s;
}

#section-father {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-bottom: 30px;
  padding: 120px 0;
  border-bottom: 1px solid var(--border-color);
  transition: 1.5s;
}

#section-father2 {
  display: flex;
  justify-content: center;
  margin-top: 90px;
  padding-bottom: 60px;
  padding: 0 200px;
}

app-carousel {
  display: none;
}

app-owl-carousel {
  display: none;
}

.section-model1 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 90%;
}

.section-model2 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 50%;
}


.section-model1 div { /*!important*/
  flex: 1 1 300px;
}

.item-sec1-1 {
  width: 50%;
  padding-right: 30px;
}

h1, h4 {
  animation: Slide_Left 1.0s ease;
}

.item-sec1-1 p {
  animation: Slide_Left 1.3s ease;
}

.item-sec1-2-3 p {
  animation: Slide_Left 1.3s ease;
}

button {
  animation: Slide_Left 1.5s ease;
}

.item-sec1-1-1 {
  text-align: center;
}

.item-sec1-2 {
  width: 50%;
}

.item-sec1-2 img {
  float: right;
}

img {
  width: 100%;
  animation: fadeIn 3s;
}

h1 {
  font-size: 50px;
}

h2 {
  font-size: 50px;
}

.sub-iten {
  font-size: 18px;
  color: rgb(171, 171, 171);
  font-weight: 400;
  margin-bottom: 0px;
}

h4 {
  font-size: 36px;
}

.divider {
  display: flex;
  justify-content: center;
  align-items: center;
}

p {
  margin-top: 10px;
  font-size: 18px;
}

.call-action {
  display: flex;
  padding: 0px;
  margin-top: 40px;
  background-color: none;
  font-size: 20px;
  justify-content: flex-start;
}

.main-button {
  font-size: 16px;
  font-weight: 500;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 10px 15px;
  justify-content: center;
  background-color: #0094E0;
  transition: 0.3s;
}

.main-button:hover {
  background-color: #0087cb;
}


.call-action-2 {
  display: flex;
  margin-top: 40px;
}


.sec2-button {
  margin-right: 10px;
  font-size: 16px;
  font-weight: 500;
  /* offset-x | offset-y | blur-radius | color */
  /*box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.14); */
  color: var(--text-color);
  border: none;
  border-radius: 6px;
  padding: 0px;
  background-color: rgba(0, 0, 0, 0);
  transition: 0.3s;
}

.sec2-button2 {
  font-size: 16px;
  font-weight: 500;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 10px 15px;
  background-color: #0094E0;
  transition: 0.3s;
}

.sec2-button2:hover {
  background-color: #0087cb;
}

.container {
  display: flex;
  justify-content: center;
  padding: 0;
  margin: 0;
}

#content {
  margin-top: 50px;
  padding-bottom: 130px;
  width: 100%;
}

.content-value {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  flex-wrap: wrap;
}

.content-value div { /*!important*/
  flex: 1 1 300px;
}

.item-sec1-1-3 {
  width: 50%;
}

.item-sec1-1-3 img {
  width: 100%;
}

.item-sec1-2-3 {
  display: grid;
  justify-content: flex-end;
  width: 50%;
}

.tab {
  width: 90%;
  transition: 0s;
}

.tab ul {
  display: flex;
  padding: 0;
  margin-top: 30px;
  justify-content: space-evenly;
  transition: 0s;
}

.tab ul li {
  line-height: 22px;
  text-align: center;
  padding: 10px; 
  transition: 0s;
}

.tab ul li fa-icon, .tab ul li p {
  color: var(--text-color);
  font-weight: 500;
  text-align: center;
  opacity: 40%;
}

.tab ul li p {
  font-size: 18px;
}

.tab ul li:hover {
  cursor: pointer;
}

li p:hover, li fa-icon:hover {
  opacity: 100%!important;
}

.color-ative fa-icon, .color-ative p {
  color: var(--text-color)!important;
  opacity: 100%!important;
}

.color-ative {
  padding: 10px;
  border-bottom: 4px solid #0094E0!important;
  animation: border_anim 0.3s linear forwards!important;
}

li div {
  padding: 10px;
}

li div:hover {
  background-color: rgb(234, 234, 234);
  border-radius: 10px;
}

fa-icon {
  font-size: 20px;
}

.icon-link {
  display: flex;
  margin-left: 40px;
}

.icon-link fa-icon {
  display: grid;
  align-items: center;
  margin-left: 10px;
}

@media screen and (max-width: 1100px) {
  app-carousel {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  app-owl-carousel {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #section-father {
    padding: 20px 0;
  }

  #content {
    padding-bottom: 100px;
  }

  .item-sec1-2 {
    margin-top: 30px;
  }

  h1, h4 {
    margin-top: 20px;
  }

  h1, h2 {
    font-size: 40px;
  }

  #section-father2 {
    display: flex;
    justify-content: center;
    padding: 20px 0;
    margin: 0;
  }

  .item-sec1-2-3 {
    display: grid;
    justify-content: flex-start;
    width: 50%;
  }

  .section-model1 {
    width: 95%;
  }

  .tab {
    width: 95%;
  }

  .container {
    display: none;
  }

  .item-sec1-1-1 {
    text-align: left;
  }

  .item-sec1-1 {
    padding-right: 0;
  }

  .call-action {
    margin-top: 20px;
  }

  .main-button {
    width: 1100px;
  }
}

@keyframes Slide_Left {
  0% {
    transform: translateY(250px) ;
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes Slide_Right {
  0% {
    transform: translateY(250px) ;
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes border_anim {
	0%{
		border-bottom-width: 1em;
	}
	100%{
		border-bottom-width: 1000em;
	}
}

